--- a/cloudAlibaba-consumer-order80/pom.xml
+++ b/cloudAlibaba-consumer-order80/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
 
+        <!-- 服务注册中心的客户端 eureka-client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <!--引入自定义的通用包-->
         <dependency>
             <groupId>com.marshio.springcloud</groupId>
