--- a/cloudAlibaba-consumer-order80/src/main/resources/application.yml
+++ b/cloudAlibaba-consumer-order80/src/main/resources/application.yml
@@ -13,7 +13,14 @@ spring:
     username: root
     password: 20173602
 
-
+eureka:
+  client:
+    # 表示将自己注册到注册中心
+    register-with-eureka: true
+    # 表示自己需要发现服务
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka/
 
 mybatis:
   # mapper文件所在位置
