--- a/cloudAlibaba-eureka7001/pom.xml
+++ b/cloudAlibaba-eureka7001/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 
