--- a/cloudAlibaba-provider-payment8002/src/main/resources/application.yml
+++ b/cloudAlibaba-provider-payment8002/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   # 服务端口号
-  port: 8001
+  port: 8002
 
 
 spring:
@@ -14,6 +14,12 @@ spring:
     url: jdbc:mysql://localhost:3306/cloudalibaba?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 20173602
+    druid:
+      test-while-idle: false
+#  cloud:
+#    loadbalancer:
+#      ribbon:
+#        enabled: false
 
 eureka:
   client:
