注册中心集群部署

--- a/cloudAlibaba-consumer-order80/src/main/resources/application.yml
+++ b/cloudAlibaba-consumer-order80/src/main/resources/application.yml
@@ -20,7 +20,7 @@ eureka:
     # 表示自己需要发现服务
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka/
+      defaultZone: http://localhost:7001/eureka
 
 mybatis:
   # mapper文件所在位置
