--- a/cloudAlibaba-provider-payment8003/src/main/resources/application.yml
+++ b/cloudAlibaba-provider-payment8003/src/main/resources/application.yml
@@ -1,7 +1,5 @@
 server:
-  # 服务端口号
-  port: 8001
-
+  port: 8003
 
 spring:
   application:
@@ -14,23 +12,31 @@ spring:
     url: jdbc:mysql://localhost:3306/cloudalibaba?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 20173602
+    druid:
+      test-while-idle: false
+#  cloud:
+#    loadbalancer:
+#      ribbon:
+#        enabled: false
 
 eureka:
   client:
-    # 注册服务
+    # 注册服务，将自己向注册中心注册时，
     register-with-eureka: true
     # 发现服务
     fetch-registry: true
     # Eureka服务端地址
     service-url:
-      # 这里必须要加 /eureka/ ，因为有过滤器做限制
+      # 这里必须要加 /eureka 的后缀，不然会被过滤掉，导致找不到注册中心
       defaultZone: http://eurekaServe7001.com:7001/eureka,http://eurekaServe7002.com:7002/eureka
+
   instance:
-    instance-id: payment8001
+    hostname: payment8003
+    prefer-ip-address: true
+    instance-id: ${eureka.instance.hostname}-${spring.application.name}:${server.port}
 
 mybatis:
   # mapper文件所在位置
   mapper-locations: classpath:mapper/*.xml
   # 实体类所在文件
   type-aliases-package: com.marshio.cloudAlibaba.entities
-
