--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,14 @@
   <packaging>pom</packaging>
 
   <modules>
-    <module>cloudAlibaba-provider-payment8001</module>
-    <module>cloudAlibaba-consumer-order80</module>
     <module>cloudAlibaba-commons</module>
     <module>cloudAlibaba-eureka7001</module>
+    <module>cloudAlibaba-eureka7002</module>
+    <module>cloudAlibaba-consumer-order80</module>
+    <module>cloudAlibaba-provider-payment8001</module>
     <module>cloudAlibaba-provider-payment8002</module>
+    <module>cloudAlibaba-eureka7002</module>
+    <module>cloudAlibaba-provider-payment8003</module>
   </modules>
 
   <description>Demo project for Springboot + Spring Cloud + Spring Cloud Alibaba</description>
