--- a/cloudAlibaba-provider-payment8001/src/main/resources/application.yml
+++ b/cloudAlibaba-provider-payment8001/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     # 数据源信息
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudalibaba?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://192.168.130.134:3306/mas?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 20173602
+    password: root
 
 eureka:
   client:
@@ -24,7 +24,7 @@ eureka:
     # Eureka服务端地址
     service-url:
       # 这里必须要加 /eureka/ ，因为有过滤器做限制
-      defaultZone: http://eurekaServe7001.com:7001/eureka,http://eurekaServe7002.com:7002/eureka
+      defaultZone: http://localhost:7001/eureka
   instance:
     instance-id: payment8001
 
