--- a/cloudAlibaba-provider-payment8002/src/main/resources/application.yml
+++ b/cloudAlibaba-provider-payment8002/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
     # 数据源信息
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudalibaba?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 20173602
+    url: jdbc:mysql://masuo-sql.mysql.rds.aliyuncs.com:3306/cloudalibaba?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: masuo
+    password: Mas+1006
     druid:
       test-while-idle: false
 #  cloud:
@@ -31,12 +31,12 @@ eureka:
     # Eureka服务端地址
     service-url:
       # 这里必须要加 /eureka 的后缀，不然会被过滤掉，导致找不到注册中心
-      defaultZone: http://eurekaServe7001.com:7001/eureka,http://eurekaServe7002.com:7002/eureka
+      defaultZone: http://eurekaserve7002.com:7002/eureka,http://eurekaserve7003.com:7003/eureka
 
   instance:
     hostname: payment8002
     prefer-ip-address: true
-    instance-id: ${eureka.instance.hostname}-${spring.application.name}:${server.port}
+    instance-id: payment8002
 
 mybatis:
   # mapper文件所在位置
