--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ HELP.md
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+/.idea/
 *.iws
 *.iml
 *.ipr
@@ -31,3 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
+
