nacos： 1、添加nacos支持，实现nacos注册中心

--- a/cloudAlibaba-provider-payment8010/pom.xml
+++ b/cloudAlibaba-provider-payment8010/pom.xml
@@ -13,6 +13,10 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!--添加nacos，注册中心、服务发现、配置中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
