--- a/cloudAlibaba-provider-payment8010/pom.xml
+++ b/cloudAlibaba-provider-payment8010/pom.xml
@@ -17,10 +17,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--添加nacos，注册中心、服务发现、配置中心-->
+        <!-- nacos，注册中心、服务发现、配置中心 -->
+        <!-- 注册中心，服务发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <!-- 配置中心 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-nacos-config</artifactId>
         </dependency>
     </dependencies>
 
